员工修改、删除

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+#\u5173\u95EDthymeleaf\u6A21\u677F\u5F15\u64CE\u7F13\u5B58\uFF0C\u65B9\u4FBF\u8C03\u8BD5
 spring.thymeleaf.cache=false
-
+#\u9879\u76EE\u8DEF\u5F84
 server.servlet.context-path=/crud
-
+#\u56FD\u9645\u5316
 spring.messages.basename=i18n.login
-
+#Date\u7C7B\u578B\u53C2\u6570\u63A5\u6536\u5B57\u7B26\u4E32\u683C\u5F0F
 spring.mvc.format.date=yyyy-MM-dd
+#\u542F\u7528 restful\u652F\u6301
+spring.mvc.hiddenmethod.filter.enabled=true
