--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,11 @@
             <artifactId>commons-lang</artifactId>
             <version>2.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.2.1</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
