--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 spring.thymeleaf.cache=false
 #\u9879\u76EE\u8DEF\u5F84
 server.servlet.context-path=/crud
+server.port=8082
+
 #\u56FD\u9645\u5316
 spring.messages.basename=i18n.login
 #Date\u7C7B\u578B\u53C2\u6570\u63A5\u6536\u5B57\u7B26\u4E32\u683C\u5F0F
