--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,14 @@ spring.mvc.hiddenmethod.filter.enabled=true
 #\u81EA\u5B9A\u4E49\u5F02\u5E38\u5904\u7406\u9875\u9762\uFF0C\u5F02\u5E38\u5BF9\u8C61\u3002\u5F02\u5E38\u4FE1\u606F
 server.error.include-exception=true
 server.error.include-message=always
+
+
+#actuator
+management.endpoints.web.base-path=/actuator
+#\u914D\u7F6E\u5F00\u542F\u5176\u4ED6\u7AEF\u70B9\u7684uri
+#\u5F00\u542F\u6240\u6709\u7684\u8BBF\u95EE\u7AEF\u70B9\uFF1A*
+#\u6307\u5B9A\u5F00\u542F\u7AEF\u70B9\u8BBF\u95EE\u5982\uFF1Abeans,env
+management.endpoints.web.exposure.include=*
+
+#\u6392\u9664\u7AEF\u70B9
+management.endpoints.web.exposure.exclude=beans
